add_executable(test_align align.cpp)
add_executable(test_badcopy badcopy.cpp)
add_executable(test_callmove callmove.cpp)
add_executable(test_constructible constructible.cpp)
add_executable(test_container container.cpp)
add_executable(test_convnull convnull.cpp)
add_executable(test_ctorthrow ctorthrow.cpp)
add_executable(test_heap heap.cpp)
add_executable(test_nocopy nocopy.cpp)
add_executable(test_overlambda overlambda.cpp)
add_executable(test_ptm ptm.cpp)
add_executable(test_recover recover.cpp)
add_executable(test_scoped_allocator scoped_allocator.cpp)
add_executable(test_swap swap.cpp)
add_executable(test_target_access target_access.cpp)
add_executable(test_usernew usernew.cpp)
add_executable(test_volatile volatile.cpp)
